[fix] project binding, titles line wrap

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -346,6 +346,7 @@ h4{
     position: relative;
     top: 33%;
     left: 25%;
+    width: 54%;
   }
   .previewContain .previewImageContain{
     display: inline-block;
